--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,19 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
+html,
+body,
+#__next {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
+  height: 100%;
+  width: 100%;
+}
 
-@import 'tailwindcss/utilities';
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
